// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Subhead component Must render the subhead with a link and some stars 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Subhead
    repo="sample.com"
    totalStars={50}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": null,
    "nodeType": "class",
    "props": Object {
      "children": <Container>
        <styled.div>
          <div>
            <Icon
              icon="book"
            />
            <Link
              className="link"
              url="sample.com"
            >
              OrencioRodolfo / 
              <b>
                orodolfo
              </b>
            </Link>
          </div>
          <Link
            className=""
            url="https://github.com/OrencioRodolfo"
          >
            <Button
              alt="Github stars"
              title="Github stars"
            >
              <PillLeft>
                <Icon
                  icon="star"
                />
                Stars
              </PillLeft>
              <PillRight>
                50
              </PillRight>
            </Button>
          </Link>
        </styled.div>
      </Container>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": null,
      "nodeType": "function",
      "props": Object {
        "children": <styled.div>
          <div>
            <Icon
              icon="book"
            />
            <Link
              className="link"
              url="sample.com"
            >
              OrencioRodolfo / 
              <b>
                orodolfo
              </b>
            </Link>
          </div>
          <Link
            className=""
            url="https://github.com/OrencioRodolfo"
          >
            <Button
              alt="Github stars"
              title="Github stars"
            >
              <PillLeft>
                <Icon
                  icon="star"
                />
                Stars
              </PillLeft>
              <PillRight>
                50
              </PillRight>
            </Button>
          </Link>
        </styled.div>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": null,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <div>
              <Icon
                icon="book"
              />
              <Link
                className="link"
                url="sample.com"
              >
                OrencioRodolfo / 
                <b>
                  orodolfo
                </b>
              </Link>
            </div>,
            <Link
              className=""
              url="https://github.com/OrencioRodolfo"
            >
              <Button
                alt="Github stars"
                title="Github stars"
              >
                <PillLeft>
                  <Icon
                    icon="star"
                  />
                  Stars
                </PillLeft>
                <PillRight>
                  50
                </PillRight>
              </Button>
            </Link>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": null,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <Icon
                  icon="book"
                />,
                <Link
                  className="link"
                  url="sample.com"
                >
                  OrencioRodolfo / 
                  <b>
                    orodolfo
                  </b>
                </Link>,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": null,
                "nodeType": "function",
                "props": Object {
                  "icon": "book",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": null,
                "nodeType": "function",
                "props": Object {
                  "children": Array [
                    "OrencioRodolfo / ",
                    <b>
                      orodolfo
                    </b>,
                  ],
                  "className": "link",
                  "url": "sample.com",
                },
                "ref": null,
                "rendered": Array [
                  "OrencioRodolfo / ",
                  Object {
                    "instance": null,
                    "key": null,
                    "nodeType": "host",
                    "props": Object {
                      "children": "orodolfo",
                    },
                    "ref": null,
                    "rendered": "orodolfo",
                    "type": "b",
                  },
                ],
                "type": [Function],
              },
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": null,
            "nodeType": "function",
            "props": Object {
              "children": <Button
                alt="Github stars"
                title="Github stars"
              >
                <PillLeft>
                  <Icon
                    icon="star"
                  />
                  Stars
                </PillLeft>
                <PillRight>
                  50
                </PillRight>
              </Button>,
              "className": "",
              "url": "https://github.com/OrencioRodolfo",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": null,
              "nodeType": "function",
              "props": Object {
                "alt": "Github stars",
                "children": Array [
                  <PillLeft>
                    <Icon
                      icon="star"
                    />
                    Stars
                  </PillLeft>,
                  <PillRight>
                    50
                  </PillRight>,
                ],
                "title": "Github stars",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": null,
                  "nodeType": "function",
                  "props": Object {
                    "children": Array [
                      <Icon
                        icon="star"
                      />,
                      "Stars",
                    ],
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": null,
                      "nodeType": "function",
                      "props": Object {
                        "icon": "star",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": [Function],
                    },
                    "Stars",
                  ],
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": null,
                  "nodeType": "function",
                  "props": Object {
                    "children": 50,
                  },
                  "ref": null,
                  "rendered": 50,
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": null,
      "nodeType": "class",
      "props": Object {
        "children": <Container>
          <styled.div>
            <div>
              <Icon
                icon="book"
              />
              <Link
                className="link"
                url="sample.com"
              >
                OrencioRodolfo / 
                <b>
                  orodolfo
                </b>
              </Link>
            </div>
            <Link
              className=""
              url="https://github.com/OrencioRodolfo"
            >
              <Button
                alt="Github stars"
                title="Github stars"
              >
                <PillLeft>
                  <Icon
                    icon="star"
                  />
                  Stars
                </PillLeft>
                <PillRight>
                  50
                </PillRight>
              </Button>
            </Link>
          </styled.div>
        </Container>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": null,
        "nodeType": "function",
        "props": Object {
          "children": <styled.div>
            <div>
              <Icon
                icon="book"
              />
              <Link
                className="link"
                url="sample.com"
              >
                OrencioRodolfo / 
                <b>
                  orodolfo
                </b>
              </Link>
            </div>
            <Link
              className=""
              url="https://github.com/OrencioRodolfo"
            >
              <Button
                alt="Github stars"
                title="Github stars"
              >
                <PillLeft>
                  <Icon
                    icon="star"
                  />
                  Stars
                </PillLeft>
                <PillRight>
                  50
                </PillRight>
              </Button>
            </Link>
          </styled.div>,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": null,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <div>
                <Icon
                  icon="book"
                />
                <Link
                  className="link"
                  url="sample.com"
                >
                  OrencioRodolfo / 
                  <b>
                    orodolfo
                  </b>
                </Link>
              </div>,
              <Link
                className=""
                url="https://github.com/OrencioRodolfo"
              >
                <Button
                  alt="Github stars"
                  title="Github stars"
                >
                  <PillLeft>
                    <Icon
                      icon="star"
                    />
                    Stars
                  </PillLeft>
                  <PillRight>
                    50
                  </PillRight>
                </Button>
              </Link>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": null,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <Icon
                    icon="book"
                  />,
                  <Link
                    className="link"
                    url="sample.com"
                  >
                    OrencioRodolfo / 
                    <b>
                      orodolfo
                    </b>
                  </Link>,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": null,
                  "nodeType": "function",
                  "props": Object {
                    "icon": "book",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": null,
                  "nodeType": "function",
                  "props": Object {
                    "children": Array [
                      "OrencioRodolfo / ",
                      <b>
                        orodolfo
                      </b>,
                    ],
                    "className": "link",
                    "url": "sample.com",
                  },
                  "ref": null,
                  "rendered": Array [
                    "OrencioRodolfo / ",
                    Object {
                      "instance": null,
                      "key": null,
                      "nodeType": "host",
                      "props": Object {
                        "children": "orodolfo",
                      },
                      "ref": null,
                      "rendered": "orodolfo",
                      "type": "b",
                    },
                  ],
                  "type": [Function],
                },
              ],
              "type": "div",
            },
            Object {
              "instance": null,
              "key": null,
              "nodeType": "function",
              "props": Object {
                "children": <Button
                  alt="Github stars"
                  title="Github stars"
                >
                  <PillLeft>
                    <Icon
                      icon="star"
                    />
                    Stars
                  </PillLeft>
                  <PillRight>
                    50
                  </PillRight>
                </Button>,
                "className": "",
                "url": "https://github.com/OrencioRodolfo",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": null,
                "nodeType": "function",
                "props": Object {
                  "alt": "Github stars",
                  "children": Array [
                    <PillLeft>
                      <Icon
                        icon="star"
                      />
                      Stars
                    </PillLeft>,
                    <PillRight>
                      50
                    </PillRight>,
                  ],
                  "title": "Github stars",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": null,
                    "nodeType": "function",
                    "props": Object {
                      "children": Array [
                        <Icon
                          icon="star"
                        />,
                        "Stars",
                      ],
                    },
                    "ref": null,
                    "rendered": Array [
                      Object {
                        "instance": null,
                        "key": null,
                        "nodeType": "function",
                        "props": Object {
                          "icon": "star",
                        },
                        "ref": null,
                        "rendered": null,
                        "type": [Function],
                      },
                      "Stars",
                    ],
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": null,
                    "nodeType": "function",
                    "props": Object {
                      "children": 50,
                    },
                    "ref": null,
                    "rendered": 50,
                    "type": [Function],
                  },
                ],
                "type": [Function],
              },
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Subhead component Must render the subhead with no link and zero stars 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Subhead
    repo=""
    totalStars={0}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": null,
    "nodeType": "class",
    "props": Object {
      "children": <Container>
        <styled.div>
          <div>
            <Icon
              icon="book"
            />
            <Link
              className="link"
              url=""
            >
              OrencioRodolfo / 
              <b>
                orodolfo
              </b>
            </Link>
          </div>
          <Link
            className=""
            url="https://github.com/OrencioRodolfo"
          >
            <Button
              alt="Github stars"
              title="Github stars"
            >
              <PillLeft>
                <Icon
                  icon="star"
                />
                Stars
              </PillLeft>
              <PillRight>
                0
              </PillRight>
            </Button>
          </Link>
        </styled.div>
      </Container>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": null,
      "nodeType": "function",
      "props": Object {
        "children": <styled.div>
          <div>
            <Icon
              icon="book"
            />
            <Link
              className="link"
              url=""
            >
              OrencioRodolfo / 
              <b>
                orodolfo
              </b>
            </Link>
          </div>
          <Link
            className=""
            url="https://github.com/OrencioRodolfo"
          >
            <Button
              alt="Github stars"
              title="Github stars"
            >
              <PillLeft>
                <Icon
                  icon="star"
                />
                Stars
              </PillLeft>
              <PillRight>
                0
              </PillRight>
            </Button>
          </Link>
        </styled.div>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": null,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <div>
              <Icon
                icon="book"
              />
              <Link
                className="link"
                url=""
              >
                OrencioRodolfo / 
                <b>
                  orodolfo
                </b>
              </Link>
            </div>,
            <Link
              className=""
              url="https://github.com/OrencioRodolfo"
            >
              <Button
                alt="Github stars"
                title="Github stars"
              >
                <PillLeft>
                  <Icon
                    icon="star"
                  />
                  Stars
                </PillLeft>
                <PillRight>
                  0
                </PillRight>
              </Button>
            </Link>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": null,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <Icon
                  icon="book"
                />,
                <Link
                  className="link"
                  url=""
                >
                  OrencioRodolfo / 
                  <b>
                    orodolfo
                  </b>
                </Link>,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": null,
                "nodeType": "function",
                "props": Object {
                  "icon": "book",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": null,
                "nodeType": "function",
                "props": Object {
                  "children": Array [
                    "OrencioRodolfo / ",
                    <b>
                      orodolfo
                    </b>,
                  ],
                  "className": "link",
                  "url": "",
                },
                "ref": null,
                "rendered": Array [
                  "OrencioRodolfo / ",
                  Object {
                    "instance": null,
                    "key": null,
                    "nodeType": "host",
                    "props": Object {
                      "children": "orodolfo",
                    },
                    "ref": null,
                    "rendered": "orodolfo",
                    "type": "b",
                  },
                ],
                "type": [Function],
              },
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": null,
            "nodeType": "function",
            "props": Object {
              "children": <Button
                alt="Github stars"
                title="Github stars"
              >
                <PillLeft>
                  <Icon
                    icon="star"
                  />
                  Stars
                </PillLeft>
                <PillRight>
                  0
                </PillRight>
              </Button>,
              "className": "",
              "url": "https://github.com/OrencioRodolfo",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": null,
              "nodeType": "function",
              "props": Object {
                "alt": "Github stars",
                "children": Array [
                  <PillLeft>
                    <Icon
                      icon="star"
                    />
                    Stars
                  </PillLeft>,
                  <PillRight>
                    0
                  </PillRight>,
                ],
                "title": "Github stars",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": null,
                  "nodeType": "function",
                  "props": Object {
                    "children": Array [
                      <Icon
                        icon="star"
                      />,
                      "Stars",
                    ],
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": null,
                      "nodeType": "function",
                      "props": Object {
                        "icon": "star",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": [Function],
                    },
                    "Stars",
                  ],
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": null,
                  "nodeType": "function",
                  "props": Object {
                    "children": 0,
                  },
                  "ref": null,
                  "rendered": 0,
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": null,
      "nodeType": "class",
      "props": Object {
        "children": <Container>
          <styled.div>
            <div>
              <Icon
                icon="book"
              />
              <Link
                className="link"
                url=""
              >
                OrencioRodolfo / 
                <b>
                  orodolfo
                </b>
              </Link>
            </div>
            <Link
              className=""
              url="https://github.com/OrencioRodolfo"
            >
              <Button
                alt="Github stars"
                title="Github stars"
              >
                <PillLeft>
                  <Icon
                    icon="star"
                  />
                  Stars
                </PillLeft>
                <PillRight>
                  0
                </PillRight>
              </Button>
            </Link>
          </styled.div>
        </Container>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": null,
        "nodeType": "function",
        "props": Object {
          "children": <styled.div>
            <div>
              <Icon
                icon="book"
              />
              <Link
                className="link"
                url=""
              >
                OrencioRodolfo / 
                <b>
                  orodolfo
                </b>
              </Link>
            </div>
            <Link
              className=""
              url="https://github.com/OrencioRodolfo"
            >
              <Button
                alt="Github stars"
                title="Github stars"
              >
                <PillLeft>
                  <Icon
                    icon="star"
                  />
                  Stars
                </PillLeft>
                <PillRight>
                  0
                </PillRight>
              </Button>
            </Link>
          </styled.div>,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": null,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <div>
                <Icon
                  icon="book"
                />
                <Link
                  className="link"
                  url=""
                >
                  OrencioRodolfo / 
                  <b>
                    orodolfo
                  </b>
                </Link>
              </div>,
              <Link
                className=""
                url="https://github.com/OrencioRodolfo"
              >
                <Button
                  alt="Github stars"
                  title="Github stars"
                >
                  <PillLeft>
                    <Icon
                      icon="star"
                    />
                    Stars
                  </PillLeft>
                  <PillRight>
                    0
                  </PillRight>
                </Button>
              </Link>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": null,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <Icon
                    icon="book"
                  />,
                  <Link
                    className="link"
                    url=""
                  >
                    OrencioRodolfo / 
                    <b>
                      orodolfo
                    </b>
                  </Link>,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": null,
                  "nodeType": "function",
                  "props": Object {
                    "icon": "book",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": null,
                  "nodeType": "function",
                  "props": Object {
                    "children": Array [
                      "OrencioRodolfo / ",
                      <b>
                        orodolfo
                      </b>,
                    ],
                    "className": "link",
                    "url": "",
                  },
                  "ref": null,
                  "rendered": Array [
                    "OrencioRodolfo / ",
                    Object {
                      "instance": null,
                      "key": null,
                      "nodeType": "host",
                      "props": Object {
                        "children": "orodolfo",
                      },
                      "ref": null,
                      "rendered": "orodolfo",
                      "type": "b",
                    },
                  ],
                  "type": [Function],
                },
              ],
              "type": "div",
            },
            Object {
              "instance": null,
              "key": null,
              "nodeType": "function",
              "props": Object {
                "children": <Button
                  alt="Github stars"
                  title="Github stars"
                >
                  <PillLeft>
                    <Icon
                      icon="star"
                    />
                    Stars
                  </PillLeft>
                  <PillRight>
                    0
                  </PillRight>
                </Button>,
                "className": "",
                "url": "https://github.com/OrencioRodolfo",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": null,
                "nodeType": "function",
                "props": Object {
                  "alt": "Github stars",
                  "children": Array [
                    <PillLeft>
                      <Icon
                        icon="star"
                      />
                      Stars
                    </PillLeft>,
                    <PillRight>
                      0
                    </PillRight>,
                  ],
                  "title": "Github stars",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": null,
                    "nodeType": "function",
                    "props": Object {
                      "children": Array [
                        <Icon
                          icon="star"
                        />,
                        "Stars",
                      ],
                    },
                    "ref": null,
                    "rendered": Array [
                      Object {
                        "instance": null,
                        "key": null,
                        "nodeType": "function",
                        "props": Object {
                          "icon": "star",
                        },
                        "ref": null,
                        "rendered": null,
                        "type": [Function],
                      },
                      "Stars",
                    ],
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": null,
                    "nodeType": "function",
                    "props": Object {
                      "children": 0,
                    },
                    "ref": null,
                    "rendered": 0,
                    "type": [Function],
                  },
                ],
                "type": [Function],
              },
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
